--- a/mods.toml
+++ b/mods.toml
@@ -5,7 +5,7 @@ mc_version = ["1.20.1"]
 mod_loader = "fabric"
 
 # 模组下载目录，程序将在此目录下创建 'mods' 文件夹
-download_dir = "./downloads/fabric-1.20.1-mods" # 这是该配置文件的特定下载目录
+download_dir = "./downloads" # 这是该配置文件的特定下载目录
 
 mods = [
     "sodium",
