feat(core): 增加额外 URL 下载功能并支持资源包和着色器包下载
- 添加了对额外 URL 下载的支持，可以处理文件、模组、资源包和着色器包
- 实现了根据版本条件下载的功能
- 增加了下载后压缩功能
- 优化了下载路径的管理，根据不同类型文件分类存储

--- a/mods.toml
+++ b/mods.toml
@@ -3,7 +3,8 @@ mc_version = ["1.20.1", "1.21.7"]
 
 # 模组加载器，可选值: "fabric", "forge", "quilt"
 mod_loader = "fabric"
-
+# 是否压缩
+compress = true
 # 模组下载目录，程序将在此目录下创建 'mods' 文件夹
 download_dir = "./downloads"
 mods = [
