feat(core): 添加对光影包的支持并优化下载流程
- 新增 shaderpacks 配置项，支持光影包的下载和处理
- 优化模组和资源包的下载流程，确保目录存在
- 修复依赖项处理中的错误
- 增加错误处理和日志记录
- 更新 mods.toml 文件，添加新模组和资源包

--- a/mods.toml
+++ b/mods.toml
@@ -1,5 +1,5 @@
 # Minecraft 版本，例如 "1.20.1"
-mc_version = ["1.20.1", "1.21.7"]
+mc_version = ["1.20.4", "1.21.7", "1.19.2", "1.20.1"]
 
 # 模组加载器，可选值: "fabric", "forge", "quilt"
 mod_loader = "fabric"
@@ -29,4 +29,22 @@ mods = [
     "sodium-extra",
     "sodium",
     "sound-physics-remastered",
+    "i18nupdatemod",
+    "memoryleakfix",
+    "distanthorizons",
+    "controlling",
+    "modernfix",
+    "no-chat-reports",
+    "starlight",
+    "lazydfu",
 ]
+
+resourcepacks = [
+    "even-better-enchants",
+    "faithful-64x",
+    "fast-better-grass",
+    "3d-crops",
+    "new-glowing-ores",
+]
+
+shaderpacks = ["complementary-reimagined", "vanilla-plus-shader"]
