style(resource): 添加 Faithful 32x 资源包并更新 mods.toml
- 在 resourcepacks 列表中添加 "faithful-32x" 资源包
- 将 "imblocker" 模组名称更改为 "imblocker-original"

--- a/mods.toml
+++ b/mods.toml
@@ -11,7 +11,7 @@ mods = [
     "rei",
     "betterf3",
     "journeymap",
-    "imblocker",
+    "imblocker-original",
     "inventory-profiles-next",
     "appleskin",
     "blur-plus",
@@ -42,6 +42,7 @@ mods = [
 resourcepacks = [
     "even-better-enchants",
     "faithful-64x",
+    "faithful-32x",
     "fast-better-grass",
     "3d-crops",
     "new-glowing-ores",
