refactor(modfetch): 重构配置处理并分离 Minecraft 相关设置
- 将 Minecraft 配置从总配置中分离，使用 mc_config 变量
- 输出配置被移动到单独的 output_config 变量
- 更新相关函数以使用新的配置结构
- 调整 mods.toml 文件格式，将 Minecraft 配置和输出配置分开

--- a/mods.toml
+++ b/mods.toml
@@ -1,12 +1,10 @@
+[minecraft]
 # Minecraft 版本，例如 "1.20.1"
-mc_version = ["1.20.4", "1.21.7", "1.19.2", "1.20.1"]
+version = ["1.20.4", "1.21.7", "1.19.2", "1.20.1"]
 
 # 模组加载器，可选值: "fabric", "forge", "quilt"
 mod_loader = "fabric"
-# 是否压缩
-compress = true
-# 模组下载目录，程序将在此目录下创建 'mods' 文件夹
-download_dir = "./downloads"
+
 mods = [
     "rei",
     "betterf3",
@@ -49,3 +47,9 @@ resourcepacks = [
 ]
 
 shaderpacks = ["complementary-reimagined", "vanilla-plus-shader"]
+
+[output]
+# 是否压缩
+compress = true
+# 模组下载目录，程序将在此目录下创建 'mods' 文件夹
+download_dir = "./downloads"
