--- a/mods.toml
+++ b/mods.toml
@@ -1,3 +1,9 @@
+[metadata]
+name = "test"
+version = "0.1.0"
+description = "A simple mod downloader"
+authors = "A"
+
 [minecraft]
 # Minecraft 版本，例如 "1.20.1"
 version = ["1.20.4", "1.21.7", "1.19.2", "1.20.1"]
@@ -35,6 +41,7 @@ mods = [
     "no-chat-reports",
     "starlight",
     "lazydfu",
+    "krypton",
 ]
 
 resourcepacks = [
@@ -50,6 +57,6 @@ shaderpacks = ["complementary-reimagined", "vanilla-plus-shader"]
 
 [output]
 # 是否压缩
-compress = true
 # 模组下载目录，程序将在此目录下创建 'mods' 文件夹
 download_dir = "./downloads"
+format = ["mrpack", "zip"]
