--- a/m2.toml
+++ b/m2.toml
@@ -1,7 +1,3 @@
-[from]
-url = "file://./m2.toml"
-format = "toml"
-
 [metadata]
 name = "test"
 version = "0.1.0"
@@ -10,7 +6,7 @@ authors = "A"
 
 [minecraft]
 # Minecraft 版本，例如 "1.20.1"
-version = ["1.21.7"]
+version = ["1.21.7", "1.20.1"]
 
 # 模组加载器，可选值: "fabric", "forge", "quilt"
 mod_loader = "fabric"
