--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,6 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.15",
     "click>=8.2.1",
+    "pyyaml>=6.0.2",
+    "toml>=0.10.2",
 ]
