build(setup): 项目设置优化和打包准备
- 修改 .gitignore 文件，排除无用文件和目录
- 更新 modfetch-ui/index.html，将网站图标指向 favicon.ico
- 删除 logo.png 文件，统一图标使用
- 编辑 pyproject.toml，添加 setuptools 构建配置和依赖项

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "modfetch"
 version = "0.1.0"
@@ -12,3 +16,14 @@ dependencies = [
     "toml>=0.10.2",
     "xmltodict>=0.14.2",
 ]
+
+[project.scripts]
+modfetch = "modfetch.__main__:cli_main"
+
+[tool.setuptools]
+packages = { find = { where = ["."] } }
+include-package-data = true
+license-files = []
+
+[dependency-groups]
+dev = ["nuitka>=2.7.12"]
