build: 修改可执行文件输出名称以支持 Windows 平台
- 将 Nuitka 构建输出文件名从 modfetch 改为 modfetch.bin
- 修复 Windows 平台下 modfetch.exe 不存在的问题

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
             tar -czf modfetch-linux.tar.gz modfetch-linux
           else
             # Nuitka 在 Windows 上生成名为 'modfetch.exe' 的可执行文件
-            mv modfetch.exe modfetch-windows.exe
+            mv modfetch.bin modfetch-windows.exe
             7z a modfetch-windows.zip modfetch-windows.exe
           fi
         shell: bash
