--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.15",
     "click>=8.2.1",
+    "loguru>=0.7.3",
     "pyyaml>=6.0.2",
     "toml>=0.10.2",
     "xmltodict>=0.14.2",
