--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "aiohttp>=3.12.15",
     "click>=8.2.1",
     "loguru>=0.7.3",
+    "lupa>=2.6",
     "pyyaml>=6.0.2",
     "toml>=0.10.2",
     "xmltodict>=0.14.2",
